# memutilz

./: .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  ToDo.txt  memutilz  memutilz.sln  vcpkg-configuration.json  vcpkg.json
agent/: CMakeLists.txt
agent/hdr/: pch.h
agent/hdr/coms/: coms.h
agent/src/: dllmain.cpp
agent/src/coms/: coms.cpp
agent/src/minhook/: hook.c
apps/: CMakeLists.txt
apps/memutilz/: CMakeLists.txt
apps/memutilz/hdr/: ApplicationWidget.h  CentralDockingArea.h  MainWindow.h  RibbonBar.h
apps/memutilz/rsrc/: MainWindow.qrc  memutilz.qrc
apps/memutilz/rsrc/styles/: dark.qss  default.qss  saribbon.qss
apps/memutilz/src/: ApplicationWidget.cpp  CentralDockingArea.cpp  Globals.h  MainWindow.cpp  MemutilzMacros.h  Options.h  RibbonBar.cpp  main.cpp
apps/memutilz/src/gui/: Resources.h
apps/memutilz/src/gui/Components/: ApplicationWidget.cpp  ApplicationWidget.h  ApplicationWidget.ui  ApplicationWidgetInternal.cpp  ApplicationWidgetInternal.h  DockManager.cpp  DockManager.h  RibbonBar.cpp  RibbonBar.h
apps/memutilz/src/gui/Components/ApplicationWidget/: Sidebar.cpp  Sidebar.h  SidebarToolButton.cpp  SidebarToolButton.h  StackWidget.cpp  StackWidget.h
apps/memutilz/src/gui/Components/DockWidgets/: Group.cpp  Group.h  TitleBar.cpp  TitleBar.h  ViewFactory.cpp  ViewFactory.h
apps/memutilz/src/gui/Components/RibbonBar/: ButtonGroupWidget.cpp  ButtonGroupWidget.h  RibbonElementFactory.cpp  RibbonElementFactory.h  RibbonElementManager.cpp  RibbonElementManager.h  SystemButtonBar.cpp  SystemButtonBar.h
apps/memutilz/src/gui/Constants/: Ids.h  Themes.h  Ui.h
apps/memutilz/src/gui/Main/: MainWindow.cpp  MainWindow.h  MainWindowInternal.cpp  MainWindowInternal.h
apps/memutilz/src/gui/Src/: AppLimits.h  Resources.cpp  Resources.h
apps/memutilz/src/gui/Src/Base/: CustomPaintToolButton.cpp  CustomPaintToolButton.h  SystemButtonBar.cpp  SystemButtonBar.h
apps/memutilz/src/gui/Src/BaseWidgets/: QConsole.h
apps/memutilz/src/gui/Src/Components/: ApplicationWidget.h  ApplicationWidget.ui  CentralDockingArea.cpp  CentralDockingArea.h  QConsole.cpp  QConsole.h  RibbonBar.cpp  RibbonBar.h
apps/memutilz/src/gui/Src/Constants/: AppLimits.h
apps/memutilz/src/gui/Src/Core/: Constants.h
apps/memutilz/src/gui/Src/Core/ActionManager/: ActionManager.h
apps/memutilz/src/gui/Src/Gui/: ApplicationWidget.h  CentralDockingArea.cpp  RibbonBar.cpp  RibbonBar.h
apps/memutilz/src/gui/Src/Main/: MainWindow.cpp  MainWindow.h  MainWindowInternal.cpp  MainWindowInternal.h
apps/memutilz/src/gui/Src/Utils/: ButtonPainters.cpp  ButtonPainters.h  IdRegistry.cpp  IdRegistry.h
apps/memutilz/src/gui/Style/: ProxyStyle.cpp  ProxyStyle.h  ThemeRegistry.cpp  ThemeRegistry.h
apps/memutilz/src/gui/Utils/: DummyWidget.cpp  DummyWidget.h  Id.cpp  Id.h  IdRegistry.cpp  IdRegistry.h  Types.h
apps/memutilz/src/gui/rsrc/: memutilz.qrc  memutilz.rc
apps/memutilz/src/gui/rsrc/styles/: dark.qss
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  DoxygenHelpers.cmake  DoxygenUtils.cmake  GlobalOptions.cmake  IPO.cmake  Options.cmake  ProjectOptions.cmake  Sanitizers.cmake  TargetConfig.cmake  (+2 more)
common/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  Issues.md  TODO.md  memcore.md  memutilz.md
docs/memutilz/: VCPKG.md
docs/memutilz/APP/: Goals.md  TODO.md
docs/memutilz/APP/Main/: Linux.md  Memutilz.md
docs/memutilz/APP/Main/Structure/: CLI11.md
docs/memutilz/APP/UI/: Deps.md  Global Hotkeys.md  Managing Signals and Slots.md  QADS.md  QConsole.md  What classes do you need.md
docs/memutilz/APP/UI/Base/: Custom AbstractScrollArea.md
docs/memutilz/APP/UI/Components/: CentralDockingArea.md
docs/memutilz/APP/UI/__General__/: Frameless Support.md  Hotkey Manager.md  Plugins.md
lib/: CMakeLists.txt
lib/hdr/: MemorySource.h
lib/src/: MemorySource.cpp
memutilz/: CMakeLists.txt  memutilz.vcxproj  memutilz.vcxproj.filters
memutilz/hdr/: Colors.h  Colours.h  MainWindow.h
memutilz/hdr/SideBar/: Config.h  IconButton.h  SideBar.h  SideBarState.h
memutilz/hdr/SidePanel/: PanelLeftSide.h  SidePanel.h  SidePanelHelpers.h  SidePanelState.h  math.h
memutilz/hdr/Widgets/: IconButton.h  Metrics.h  Pages.h  SideBar.h
memutilz/hdr/coms/: coms.h
memutilz/hdr/gui/: Hexview.h  MainWindow.h  Ui_MainWindow.h  common.h  constants.h
memutilz/hdr/gui/MemoryView/: AbstractMemoryView.h  AssemblyTableModel.h  AssemblyView.h  Hexview.h  IMemoryView.h
memutilz/hdr/mem/: Disassembler.h  Exception.h  Handle.h  Memdump.h  Meminfo.h  Memscan.h  PageInfo.h  Process.h  common.h  constants.h
memutilz/hdr/mem/injection/: injection.h
memutilz/hdr/priv/: privilege.h
memutilz/hdr/utilz/: privilege.h
memutilz/rsrc/: MainWindow.qrc  MainWindow.ui
memutilz/rsrc/styles/: base.qss  dark.qss
memutilz/src/: MainWindow.cpp  main.cpp
memutilz/src/SideBar/: IconButton.cpp
memutilz/src/SidePanel/: PanelLeftSide.cpp  SidePanel.cpp  SidePanelHelpers.cpp  SidePanelState.cpp  math.cpp
memutilz/src/Widgets/: IconButton.cpp  SideBar.cpp
memutilz/src/Widgets/SideBar/: SideBar.cpp  SideBarState.cpp
memutilz/src/coms/: coms.cpp
memutilz/src/gui/: Hexview.cpp  MainWindow.cpp  Ui_MainWindow.cpp
memutilz/src/gui/MemoryView/: AbstractMemoryView.cpp  AssemblyTableModel.cpp  AssemblyView.cpp  Hexview.cpp
memutilz/src/hash/: xxhash.c
memutilz/src/mem/: Disassembler.cpp  Memdump.cpp  Meminfo.cpp  Memscan.cpp  PageInfo.cpp  Process.cpp
memutilz/src/mem/injection/: injection.cpp
memutilz/src/priv/: privilege.cpp
memutilz/src/utilz/: privilege.cpp
memutilz/test/: genPattern.py  test.py
memutilz/ui/: MainWindow.ui
plugins/agent/: CMakeLists.txt
plugins/agent/src/: dllmain.cpp
sdk/: CMakeLists.txt
sdk_cpp/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/include/: MemorySource.h
src/lib/include/Utils/: Id.h  IdRegistry.h
src/lib/src/: MemorySource.cpp  MemorySource.h
src/lib/src/Utils/: Id.cpp  IdRegistry.cpp
tests/: CMakeLists.txt  example.cpp
(+26 files in other folders)
